# HAC

./: .gitignore  Dockerfile  README.md  build-app.sh  run-server.sh
app/: Makefile.in  NEWS  README  configure  configure.ac
app/src/: Makefile.am  Makefile.in  MathExpression.cpp  MathExpression.h
app/src/client/: Config.cpp  Config.h  HAC.cpp  HAC.h  Makefile.am  Makefile.in  WorkUnit.h  client.cpp
app/src/misc/: Coordinates.h  Hash.cpp  Hash.h  HashData.h  Log.cpp  Log.h  Makefile.am  Makefile.in  NetStream.cpp  NetStream.h  Password.cpp  Password.h  Random.h  Socket.cpp  Socket.h  Utils.cpp  Utils.h
app/src/server/: Makefile.am  Makefile.in  Server.cpp  Server.h  User.cpp  User.h  hacd.cpp  hacd.h  mailpp.h  main.cpp  server.cpp
app/src/test/: Makefile.am  main.cpp
sql/: hacdb.sql
